web-infras/parser/tests/fixtures/babel/es2015/for-in/var-arraybindingpattern-initializer/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,10)
1|for (var [a] = 0 in {});
 |        ^
